--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
     <artifactId>jersey-servlet</artifactId>
     <version>1.19.1</version>
 </dependency>
-    
+
+	<dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.6.2</version>
+	</dependency>
+ 
   </dependencies>
 </project>
